Compiler/tests/good/probA.nx
val n : int = 4;
val k : int = 2;
val a : int = 0;
val b : int = 0;

function isValid(a : int, b : int) : int
{
    return (a >= 0 && a < n) && (b >= 0 && b < n);
}

function move(a : int, b : int, prof : int) : int
{
    if( (!isValid(a, b)) || prof > k) {
        return 0;
    }

    val x : int = prof == k;

    return x + move(a - 2, b + 1, prof + 1) 
      + move(a - 1, b + 2, prof + 1) 
      + move(a + 1, b + 2, prof + 1) 
      + move(a + 2, b + 1, prof + 1) 
      + move(a + 2, b - 1, prof + 1) 
      + move(a + 1, b - 2, prof + 1) 
      + move(a - 1, b - 2, prof + 1) 
      + move(a - 2, b - 1, prof + 1);
}

printn(move(a, b, 0));
