Compiler/tests/bad/function14.nx
function somar(x : int, y : int) : [0 .. 1]
{
    return 3;
}

print(somar(2));
